# lyj_ws

./: .gitignore  README.md  final_term_project.m  imageFileEdit.py
BDonTuk/: Assignment_1.ipynb
UngYongTuk/: Test.ipynb
VTD/: DEM_Extraction.ipynb  DTEDConversion.ipynb  PPM.ipynb  RDM_test.m  Test_code.m  cfar_study.m  clutter.m  clutter_rcs.m  helperDetectionsMap.m  helperIRDetectability.m  helperMakeTransceiver.m  helperPPMCalc.m  helperPlotClutterScenario.m  helperPlotGroundProjectedPattern.m  helperPlotRDM.m  helperPlotScenarioSurface.m  helperTheaterPlot.m  landTemperature.ipynb  pixel_test_IR.m  pixel_test_rgb.m  radar_target_generation_and_detection.m  snr.m
VTD/RADAR_simulation/: Angle_trim.m  Find_Index.m  LOS_test_multi.m  LOS_test_new.m  LOS_test_old.m  LOS_test_single.m  PSO_SIR_Optimization.m  PSO_visibility.m  PSOfunction.m  RADAR_Module.m  RADAR_Module_SIR.m  RADAR_Module_SNR.m  RADAR_loc_sim.m  RK4.m  cal_alt.m  check_target_behind.m  check_visibility.m  convert_grid.m  find_sir.m  find_sir_multi.m  find_sir_new.m  heading2.m  interp_1.m  my_simulation.m  plot_radar.m  plot_radar_test.m  pos2grid.m  pseudo6dof.m  test.m  visualize_PSO_SIR.m  visualize_PSO_SIR_2.m  visualize_PSO_SIR_3.m  visualize_PSO_gray.m  visualize_los.m
algorithm/source/: cote_preraration.ipynb
control/: datfil  difference_equation_simulation.m  impact_angle_control.ipynb
control/optimal/: study.ipynb
cpp/source/C++20/ch8/: test  test.cpp
drone/: trajactory_visualize.ipynb
drone/apps/simulation/: main_sim.cpp
drone/control/source/: controller.cpp
drone/include/: controller.h
drone/px4/src/: controller.cpp  controller.h  sixdof.cpp  sixdof_types.h
matlab_files/LIG_RFC/: _main.ipynb  model.py
matlab_files/sources/Zarchan/: Chpater02.m
python/: fileNameCheck.py  study.ipynb  textRecognition.py
radar/: DatFileEdit.ipynb  DataComparison.ipynb  FEKO_result_visualization.m  Gaussian_Filter.m  Gaussian_Noise.m  Interpolation_RCS.m  Moving_Average_Filter.m  RCS_Analysis.m  RCS_Final.m  RCS_HISTORY.m  error_visualization.m  ffeEdit.ipynb  rcs_function.m
radar/LIG_RFC/: dataset.py
study/: static_study.cpp  test.ipynb
test/: practice.ipynb
uav_gnc_ws/core/: trajactory_visualize.ipynb
uav_gnc_ws/core/dynamics/: sixdof.cpp
uav_gnc_ws/include/: sixdof.h
uav_gnc_ws/src/uav_gnc/: CMakeLists.txt  package.xml
uav_gnc_ws/src/uav_gnc/config/: control.yaml  guidance.yaml  navigation.yaml  simulation.yaml
uav_gnc_ws/src/uav_gnc/include/uav_gnc/: ekf.h  trajectory.h
uav_gnc_ws/src/uav_gnc/launch/: bringup.launch.py
uav_gnc_ws/src/uav_gnc/src/: control_node.cpp  ekf.cpp  guidance_node.cpp  navigation_node.cpp  simulation_node.cpp  trajectory.cpp  validation.ipynb
uav_gnc_ws/src/uav_gnc/src/control/: controller.cpp
uav_gnc_ws/src/uav_gnc/src/dynamics/: sixdof.cpp
uav_gnc_ws/src/uav_gnc/src/evaluation/: tracking_eval_node.cpp
uav_gnc_ws/src/uav_gnc/src/visualization/: path_viz_node.cpp
